@@ -1,5 +1,8 @@
 2621.	[doc]		Made copyright boilterplate consistent.  [RT #19833]
 
+2920.	[bug]		Delay thawing the zone until the reload of it has
+			completed successfully.  [RT #19750]
+
 2618.	[bug]		The sdb and sdlz db_interator_seek() methods could
 			loop infinitely. [RT #19847]
 
